--- a/paperclip_styling.css
+++ b/paperclip_styling.css
@@ -103,9 +103,7 @@ h1 {
     padding: 10px;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: space-between;
-    box-sizing: border-box;
 }
 
 #upgrade-title {
@@ -115,29 +113,32 @@ h1 {
     height: 50%;
     width: 70%;
     align-items: center;
+    border: 3px dotted white;
+
 }
 
 .upgrade-count {
     display: flex;
     flex-wrap: wrap;
     height: 50%;
-    width: 30%;
+    width: 20%;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
+    border: 3px dotted red;
+
 }
 
 .upgrade-price {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-end;
     font-size: 15px;
-    display: flex;
-    height: 30%;
+    height: 65%;
     width: 100%;
     text-align: right;
-    justify-content: right;
     overflow: hidden;
-    padding-right: 3px;
-
+    padding-right: 20px;
+    border: 3px dotted blue;
 }
 
 #upgrade1price {
@@ -182,31 +183,47 @@ h1 {
     display: flex;
     border: 3px solid black;
     cursor: pointer;
-    padding: 5px;
+    padding: 10px;
     font-size: 30px;
     width: 100%;
     height: 15%;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
-.manage-button :first-child {
+#manager_title {
+    display: flex;
     flex-wrap: wrap;
-    height: 50%;
+    font-size: 30px;
+    height: 60%;
     width: 70%;
+    align-items: center;
+    justify-content: center;
+    border: 3px dotted white;
 }
 
 .manage-count {
+    display: flex;
     flex-wrap: wrap;
+    height: 60%;
     width: 30%;
-    height: 50%;
+    align-items: center;
+    justify-content: right;
+    border: 3px dotted red;
 }
 
 .manage-price {
-    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    font-size: 20px;
     width: 100%;
+    height: 35%;
+    text-align: right;
+    overflow: hidden;
+    padding-right: 10px;
     border: 5px dotted red;
 }
 
