--- a/paperclip_styling.css
+++ b/paperclip_styling.css
@@ -79,6 +79,7 @@
 .play_button {
     display: flex;
     align-items: center;
+    justify-content: center;
     opacity: 0%;
     cursor: pointer;
     position: absolute;
@@ -138,8 +139,8 @@
 }
 
 .link {
-    font-size: 15px;
-    margin-top: -6px;
+    font-size: 20px;
+    font-weight: 900;
 }
 
 .setting {
@@ -172,37 +173,40 @@
     top: 15%;
     height: 70%;
     width: 70%;
-    background-color: white;
-    border:5px dotted blue;
+    background-color: greenyellow;
+    border:5px solid green;
     transition: opacity 0.15s;
     z-index: 90;
     padding-left: 10px;
     padding-top: 5px;
+    border-radius: 30px;
 }
 
 .button-side {
     background-color: blue;
     height: 100%;
-    max-width: 300px;
+    max-width: 200px;
     width: 100%;
+    margin-left: 5%;
 }
 
 .settings-button {
     height: 100px;
     width: 100px;
+    border-radius: 50%;
 }
 
 .settings-body {
     display: flex;
+    flex-direction: column;
 }
-#settings-title {
-    font-size: 30px;
+.settings-title {
+    font-size: 70px;
     font-weight: bold;
     max-height: 100px;
-    width: 100%;
     height: 100%;
     text-align: center;
-    background-color: red;
+    align-items: center;
 }
 
 .hidden {
@@ -227,6 +231,7 @@
 /*BODY*/
 body {
     background-color: black;
+    border: 4px solid greenyellow;
     position: fixed;
     height: 100dvh;
     width: 100dvw;
@@ -239,7 +244,7 @@ body {
 
 .mainGame {
     display: flex;
-    border: 4px solid blue;
+    border: 4px solid greenyellow;
     height: 95%;
 }
 
@@ -247,7 +252,6 @@ body {
 
 .clicker {
     width: 40%;
-    border: 4px solid greenyellow;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -260,11 +264,13 @@ body {
 }
 
 .clicking-square {
-    padding: 30px;
+    padding: 50px;
     background-image: url(https://wallpaper-house.com/data/out/7/wallpaper2you_205177.gif);
     border-radius: 30px;
     z-index: 7;
     flex: 9;
+    margin: 30px;
+
 }
 
 .clicking-square-solid {
@@ -276,33 +282,90 @@ body {
 
 .score {
     display: inline-block;
-    font-size: clamp(50px, 4vw, 70px);
-    color: white;
+    font-size: clamp(60px, 3vw, 80px);
+    color: greenyellow;
     font-weight: 900;
-    border: 5px solid white;
+    height: 40%;
+    width: 100%;
+}
+
+.highlight {
+    background: rgba(0, 0, 0, 0.7);
 }
 
 .score-alt {
     display: inline-block;
-    font-size: 30px;
-    color: white;
-    border: 5px solid white;
+    font-size: 40px;
+    font-weight: 700;
+    color: greenyellow;
 }
 
 .bps {
-    font-size: 20px;
-    color: white;
-    border: 5px solid white;
-    padding: 0px;
+    font-size: 25px;
+    color: greenyellow;
     font-style: italic;
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .game-bottom {
-    flex: 1;
-    background-color: white;
-    justify-content: flex-end;
+    display: flex;
+    flex: 1.5;
+    background-color: green;
     z-index: 8;
+    flex-direction: row;
+}
+
+.bottom-instructions {
+    width: 60%;
+    height: 100%;
+    background-color: black;
+    color: greenyellow;
+    font-weight: 600;
+    font-size: 15px;
+    z-index: 10;
+}
+
+.import_export_title {
+    font-weight: 900;
+    font-size: 18px;
+    padding: 3px;
+    white-space: nowrap;
+}
+
+#import-btn {
+    cursor: pointer;
+    height: 100%;
+    background-color: greenyellow;
+    border: 3px solid black;
+    justify-content: left;
+}
+
+#export {
+    cursor: pointer;
+    height: 100%;
+    width: 20%;
+    background-color: yellowgreen;
+    border: 3px solid black
+
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.import-label {
+    background-color: greenyellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: 3px solid black;
+}
+
+#import {
+    background-color: greenyellow;
+    border: 3px solid black;
 }
 
 /*UPGRADES*/
@@ -354,8 +417,6 @@ body {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    margin-top: 10px;
-    height: 20%;
 }
 
 .upgrade-below-rest {
@@ -373,7 +434,7 @@ body {
 .upgrade-below-img img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .upgrade-price {
@@ -394,6 +455,7 @@ body {
     border: 3px solid greenyellow;
     background-color:black;
     flex: 1.5;
+    z-index: 8;
 }
 
 .upgrade_left {
@@ -564,12 +626,12 @@ body {
 
 /*HOVERING BOXES*/
 .upgrade-hover-textbox {
-    color: white;
+    color: black;
     display:flex;
     flex-direction: column;
     font-style: italic;
-    background-color: black;
-    border: 3px solid greenyellow;
+    background-color: greenyellow;
+    border: 5px solid black;
     position: absolute;
     opacity: 0;
     z-index: 0;
@@ -615,6 +677,61 @@ body {
     border-radius: 5px;
     z-index: 8;
 }
+
+.manager-hover-textbox {
+    color: black;
+    display:flex;
+    flex-direction: column;
+    font-style: italic;
+    background-color: greenyellow;
+    border: 5px solid black;
+    position: absolute;
+    opacity: 0;
+    z-index: 0;
+    transition: opacity 0.25s;
+    padding: 5px;
+    width: 300px;
+    height: 120px;
+    right: 104%;
+    top: -1px;
+    border-radius: 5px;
+}
+
+.manager-hover-textbox :first-child {
+    margin: 0;
+    margin-top: 5px;
+    font-size: 15px;
+    padding: 0;
+    line-height: 1.2;
+}
+
+.manager-hover-textbox p {
+    font-size: 15px;
+}
+
+.manage-button:hover .manager-hover-textbox {
+    z-index: 20;
+    opacity: 1;
+}
+
+.manager-hover-textbox-locked {
+    color: white;
+    display:flex;
+    flex-direction: column;
+    font-style: italic;
+    background-color: black;
+    border: 3px solid greenyellow;
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.25s;
+    padding: 5px;
+    width: 300px;
+    right: 106%;
+    top: -1px;
+    border-radius: 5px;
+    z-index: 10;
+}
+
 
 /*ABOUT*/
 
