--- a/paperclip_styling.css
+++ b/paperclip_styling.css
@@ -469,6 +469,10 @@ body {
     z-index: 9;
 }
 
+.clicker img:hover{
+    width: 17vw;
+}
+
 .clicking-square {
     padding: 30px;
     background-image: url(https://wallpaper-house.com/data/out/7/wallpaper2you_205177.gif);
@@ -659,18 +663,16 @@ input[type="file"] {
 }
 
 .upgrade-below-img {
+    height: 3.5vh;
     width: 2vw;
-    display: flex;
-    justify-content: flex-end;
+    aspect-ratio: 1;
+    margin-right: -3px;
 }
 
 .upgrade-below-img img {
-    height: 1.8vw;
-    width: 1.8vw;
-    aspect-ratio: 1;
+    height: 100%;
+    width: 100%;
     object-fit: contain;
-    justify-content: center;
-    align-items: center;
 }
 
 .upgrade-price {
@@ -679,6 +681,8 @@ input[type="file"] {
     align-items: flex-end;
     font-size: 1vw;
     overflow: hidden;
+    margin-right: .1vw;
+    padding-right: 3px;
 }
 
 .red_price {
@@ -829,6 +833,9 @@ input[type="file"] {
     justify-content: center;
 }
 
+#manager6_title {
+    font-size: 2.6vw;
+}
 .manage-count {
     display: flex;
     flex-wrap: wrap;
@@ -845,11 +852,12 @@ input[type="file"] {
     text-align: right;
     overflow: hidden;
     flex-direction: row;
-    margin-right: 2px;
+    margin-right: .1vw;
+    padding-right: 3px;
 }
 
 .manage-price-img {
-    height: 2vw;
+    height: 3.8vh;
     width: 2vw;
     aspect-ratio: 1;
 }
@@ -897,7 +905,7 @@ input[type="file"] {
 }
 
 .upgrade-hover-textbox p {
-    font-size: .8vw;
+    font-size: 0.8vw;
 }
 
 .upgrade-button:hover .upgrade-hover-textbox {
