--- a/paperclip_styling.css
+++ b/paperclip_styling.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     letter-spacing: -2px;
     font-family: 'JetBrains Mono', 'Courier New', monospace;
+    font-weight: 600;
 }
 
 /*INTRO*/
@@ -256,8 +257,17 @@
 }
 
 .link {
-    font-size: 20px;
+    height: 100%;
+    font-size: 1.5vw;
     font-weight: 900;
+    display: flex;
+    align-items: center;
+    margin-left: 0.7vw;
+    margin-right: 0.7vw;
+}
+
+.link p {
+    margin: 0;
 }
 
 .setting {
@@ -469,8 +479,17 @@ body {
     z-index: 9;
 }
 
+@keyframes clicker_hover {
+    0% {width: 16vw;}
+    20% {width: 17vw;}
+    50% {width: 16.4vw;}
+    70% {width: 17vw;}
+    100% {width: 16vw;}
+}
+
 .clicker img:hover{
-    width: 17vw;
+    animation-name: clicker_hover;
+    animation-duration: .5s;
 }
 
 .clicking-square {
@@ -499,6 +518,7 @@ body {
     font-weight: 900;
     height: 40%;
     width: 100%;
+    margin-bottom: 5vh;
 }
 
 .highlight {
@@ -516,8 +536,8 @@ body {
     font-size: 1.5vw;
     color: greenyellow;
     font-style: italic;
-    margin-bottom: 30px;
-    margin-top: 30px;
+    font-weight: 700;
+    margin-top: 5vh;
 }
 
 .star {
@@ -687,6 +707,10 @@ input[type="file"] {
 
 .red_price {
     color: red;
+}
+
+#upgr7title {
+    font-size: 1.85vw;
 }
 
 
@@ -899,13 +923,13 @@ input[type="file"] {
 .upgrade-hover-textbox :first-child {
     margin: 0;
     margin-top: 5px;
-    font-size: 1vw;
+    font-size: 1.2vw;
     padding: 0;
     line-height: 1.2;
 }
 
 .upgrade-hover-textbox p {
-    font-size: 0.8vw;
+    font-size: 1vw;
 }
 
 .upgrade-button:hover .upgrade-hover-textbox {
