--- a/paperclip_styling.css
+++ b/paperclip_styling.css
@@ -484,15 +484,25 @@ body {
 
 @keyframes clicker_hover {
     0% {width: 16vw;}
-    20% {width: 17vw;}
-    50% {width: 16.4vw;}
-    70% {width: 17vw;}
+    50% {width: 16.5vw;}
     100% {width: 16vw;}
 }
 
-.clicker img:hover{
+@keyframes clicker_click {
+    0% {width: 16vw;}
+    50% {width: 15vw;}
+    100% {width: 16vw;}
+}
+
+#click-box.clicked, #click-box.clicked:hover {
+    animation-name: clicker_click;
+    animation-duration: 0.15s;
+    animation-timing-function: ease-out;
+}
+
+#click-box:hover{
     animation-name: clicker_hover;
-    animation-duration: .5s;
+    animation-duration: .3s;
 }
 
 .clicking-square {
